CSS/style.css
/* General Styling */
body {
  background-color: white;
}

a {
  text-decoration: none;
}

a:link,
a:visited {
  color: inherit;
}

.allcaps {
  text-transform: uppercase;
  font-style: normal;
}

img {
  width: 100%;
  height: auto;
}

.img-caption {
  width: 80%;
  color: #666;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  margin: 10px 20px 0;
  margin-left: 0;
  text-align: left;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.caption-credit {
  font-size: 0.75rem;
  color: #888;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  line-height: 1.125rem;
  letter-spacing: 0.01em;
  vertical-align: baseline;
  text-align: left;
}

.blue-button {
  border-radius: 3px;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  vertical-align: middle;
  background-color: #567b95;
  border: 1px solid #326891;
  color: #fff;
  font-size: 11px;
  line-height: 11px;
  font-weight: 700;
  letter-spacing: 0.05em;
  padding: 11px 12px 8px;
  text-transform: uppercase;
  margin: 0 3px;
}

.blue-button:hover {
  cursor: pointer;
}

/* Navbar */
#navigation-top {
  position: fixed;
  top: 0;
  left: 0;
  background-color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 42px;
  width: 100%;
  border-bottom: 1px #e2e2e2 solid;
  z-index: 2;
}

.nav-buttons {
  display: flex;
  justify-content: space-between;
}

.nav-icon {
  height: 23px;
  margin: 0 10px;
  width: auto;
}

#top-logo {
  height: 26px;
  width: auto;
}

#nav-section {
  color: black;
  font-size: 14.25px;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.7px;
  line-height: 19px;
  text-decoration: none;
}

/* Header */
.page-header {
  width: 100%;
  margin-top: 42px;
  margin-left: auto;
  margin-right: auto;
}

.article-title {
  color: #121212;
  font-family: nyt-cheltenham, georgia, 'times new roman', times, serif;
  font-weight: 700;
  font-style: italic;
  font-size: 2.5rem;
  line-height: 3rem;
  padding-bottom: 20px;
  border-bottom: 1px rgb(204, 204, 204) solid;
  width: 50%;
  margin: 0 auto;
}

#share-buttons-top {
  display: flex;
  width: 50%;
  margin: 20px auto;
  justify-content: left;
}

.share-button-pos {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  height: 30px;
  width: 30px;
}

.share-button-background {
  background-color: #eee;
  border: 1px #eee solid;
  border-radius: 50%;
  color: black;
}

.share-button-background:hover {
  background-color: white;
}

.header-figure {
  max-width: 945px;
  margin: 25px auto 43px auto;
}

#img-alan-guth {
  width: 100%;
  height: auto;
}

#article-author {
  margin: 0 auto 20px auto;
  width: 50%;
  text-align: left;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 700;
  color: #333;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

#author-link {
  text-decoration: underline;
  text-decoration-color: #ccc;
}

#article-date {
  margin: 0 auto 30px auto;
  width: 50%;
  text-align: left;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 500;
  color: #333;
  font-size: 0.8125rem;
  line-height: 1rem;
}

/* Signup Message */
#signup-message {
  width: 47%;
  border-top: 1px rgb(204, 204, 204) solid;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: auto;
}

#signup-text {
  max-width: 500px;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  font-size: 1.25rem;
}

#signup-text-em {
  font-size: 0.875rem;
  font-weight: 700;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-style: normal;
  text-transform: uppercase;
}

.signup-button {
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-style: normal;
  font-weight: 700;
  height: 32px;
  text-align: center;
  width: 80px;
  margin: auto;
}

.signup-button:hover {
  cursor: pointer;
  color: rgb(255, 255, 255);
  background-color: rgb(0, 0, 0);
  border: 1px solid rgb(0, 0, 0);
  border-radius: 2px;
}

/* Main Article */
.text-section {
  max-width: 50%;
  margin-left: auto;
  margin-right: auto;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  font-size: 20px;
  line-height: 30px;
  vertical-align: baseline;
  letter-spacing: normal;
  word-spacing: 0;
}

.article-subtitle {
  font-family: nyt-imperial, georgia, "times new roman", times, serif;
  font-size: 20px;
  line-height: 30px;
  vertical-align: baseline;
  letter-spacing: normal;
  word-spacing: 0;
  font-weight: 700;
}

.article-figure {
  width: 100%;
  height: auto;
  margin-left: auto;
}

.article-video {
  width: 100%;
  height: 380px;
}

#theory-of-inflation {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

#theory-grid {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.theory-grid-row {
  display: flex;
  justify-content: space-between;
}

.theory-grid-item {
  display: flex;
  flex-direction: column;
  flex: initial;
  width: 173px;
  font-family: nyt-franklin, arial, helvetica, sans-serif;
  font-size: 14px;
  line-height: 17px;
  font-weight: 300;
}

.grid-em {
  font-size: 11px;
  font-weight: bold;
  letter-spacing: 0.05em;
  line-height: 17px;
  font-family: nyt-franklin, arial, helvetica, sans-serif;
}

.grid-img {
  display: block;
  width: 200px;
  height: 120px;
}

.main-aside {
  position: relative;
  top: 850px;
  right: 50px;
  float: right;
  display: flex;
  flex-direction: column;
  width: 240px;
}

.main-aside-title {
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-size: 14px;
  line-height: 14px;
  vertical-align: baseline;
  letter-spacing: 0.28px;
  font-weight: 700;
  padding-bottom: 15px;
  border-bottom: 1px #e2e2e2 solid;
}

.main-aside-pick {
  display: flex;
  margin-bottom: 15px;
}

.main-aside-pick:hover {
  cursor: pointer;
  text-decoration: underline;
}
/* ... */

